altered all of the nav bars2

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+  <link href="<?php bloginfo('template_directory');?>style.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -40,7 +40,7 @@
         </nav>
 
 <div class="container-fluid">
-        <div class="col-lg-6 col-md-6 col-xs-12" >
+        <div class="col-lg-8 col-md-12 col-xs-12" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
@@ -59,7 +59,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6 col-md-6 col-xs-6" style="background-color:yellow;">
+    <div class="col-lg-6 col-md-6 col-xs-6">
         <div class="stories">
                     <h4>Popular Stories</h4>
                         <ul>
@@ -99,7 +99,7 @@
                         </ul>
     </div>
         </div>
-            <div class="col-lg-6 col-md-6 col-xs-7" style="background-color:green;">
+            <div class="col-lg-6 col-md-6 col-xs-7" >
                 <div class="contributors">
                     <h4>Contributors</h4>
                         <ul>
@@ -141,7 +141,7 @@
             </div>
   </div>
 <div class="row">
-         <div class="col-lg-7 col-md-6 col-xs-0" style="background-color:green;">
+         <div class="col-lg-7 col-md-6 col-xs-0">
               <div class="tweets" >
                     <h4>The Tweets</h4>
                          <ul>
@@ -208,25 +208,22 @@
 
             <div class="quizzies">
                <h4>Quizzies</h4>
-                        <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+                  <ul>
+                      <li class="service-list">
+                          <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                          <p>The Best Labor Day Deals</p><a href="url"> More</a>
 
-                            </li>
-                        </ul>
-                         <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+                      </li>
+                  </ul>
+                   <ul>
+                      <li class="service-list">
+                          <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                          <p>The Best Labor Day Deals</p><a href="url"> More</a>
 
-                            </li>
-                        </ul>
+                      </li>
+                  </ul>
               </div>
           </div>
-
-
-
     </div>
   </div>
 </div>
