--- a/quiz.html
+++ b/quiz.html
@@ -12,9 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+  <link href="<?php bloginfo('template_directory');?>quiz.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/quiz.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -40,7 +40,7 @@
         </nav>
 
 <div class="container-fluid">
-        <div class="col-lg-6 col-md-6 col-xs-12" >
+        <div class="col-lg-8 col-md-12 col-xs-12" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
@@ -62,7 +62,7 @@
 
     <h3>Quiz</h3>
         <div class="row">
-              <div class="col-md-6 col-lg-6 col-xs-12" style="background-color:green;">
+              <div class="col-md-6 col-lg-6 col-xs-12" >
                   <div class = "quiz">
                          <div class="header_quiz_image">
                         </div>
@@ -82,9 +82,9 @@
 
         </div>
         <div class="row">
-               <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+               <div class="col-md-6 col-lg-3 col-xs-12" style=>
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box" >
                             quiz content here
                   </div>
                     <div class="checkbox">
@@ -93,9 +93,9 @@
                   </div>
               </div>
 
-              <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+              <div class="col-md-6 col-lg-3 col-xs-12" >
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box">
                             quiz content here
                   </div>
                     <div class="checkbox">
@@ -105,9 +105,9 @@
               </div>
         </div>
         <div class="row">
-               <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+               <div class="col-md-6 col-lg-3 col-xs-12" >
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box">
                             quiz content here
                   </div>
                     <div class="checkbox">
@@ -116,9 +116,9 @@
                   </div>
               </div>
 
-              <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+              <div class="col-md-6 col-lg-3 col-xs-12" >
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box">
                             quiz content here
                   </div>
                     <div class="checkbox">
@@ -128,9 +128,9 @@
               </div>
         </div>
         <div class="row">
-               <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+               <div class="col-md-6 col-lg-3 col-xs-12" >
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box">
                             quiz content here
                   </div>
                     <div class="checkbox">
@@ -139,9 +139,9 @@
                   </div>
               </div>
 
-              <div class="col-md-6 col-lg-3 col-xs-12" style="background-color:yellow;">
+              <div class="col-md-6 col-lg-3 col-xs-12" >
                   <div class = "header_quiz">
-                    <div class = "quiz_box" style="background-color:blue;">
+                    <div class = "quiz_box">
                             quiz content here
                   </div>
                     <div class="checkbox">
