--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+  <link href="<?php bloginfo('template_directory');?>login.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/login.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -42,7 +42,7 @@
         </nav>
 
 <div class="container-fluid">
-        <div class="col-lg-6 col-md-6 col-xs-12" >
+        <div class="col-lg-8 col-md-6 col-xs-12" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
