--- a/stories.html
+++ b/stories.html
@@ -12,9 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+  <link href="<?php bloginfo('template_directory');?>stories.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/stories.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
