--- a/videos.html
+++ b/videos.html
@@ -41,56 +41,57 @@
             </ul>
         </nav>
 
-<div class="container-fluid">
-        <div class="col-lg-6 col-md-6 col-xs-12" >
-              <div class="social">
-                 <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
-              </div>
+
+          <div class="col-lg-push-8 col-xs-12" >
+                <div class="social">
+                   <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
+                   <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
+                </div>
+          </div>
 
 </head>
 
 
 <body>
 
-<div class="container">
-  <div class="videos">
-    <h3>Videos</h3>
+    <div class="container-fluid">
+      <div class="videos">
+        <h3>Videos</h3>
+        </div>
+            <div class="row">
+                  <div class="col-md-6 col-lg-6 " >
+                      <div class = "video-container">
+                        <div class="playbtn"><img src="./images/playbtn.png"></div>
+                                  <div class="UnicornLarge">
+                                    <img src="./images/unicorn-large-crop.jpg">
+                                   <iframe  frameborder="0" webkitallowfullscreen>
+                                    </iframe>
+                                  </div>
+                        </div>
+
+                  </div>
+
+                  <div class="col-lg-offset-9">
+                                <div class="adimagevideo"><img src="./images/Ad-femme.jpg">
+                                  <div class="emailvideo">
+                                      <h3>Get News</h3>
+                                    <form action="action_page.php">
+                                        <input type="email" placeholder="your email address" name="email">
+                                      <button type="button" class="btn btn-default">Sign Me Up</button>
+                                    </form>
+                                  </div>
+                                </div>
+                  </div>
+          </div>
     </div>
-        <div class="row">
-              <div class="col-md-6 col-lg-6 " >
-                  <div class = "video-container">
-                    <div class="playbtn"><img src="./images/playbtn.png"></div>
-                              <div class="UnicornLarge">
-                                <img src="./images/unicorn-large-crop.jpg">
-                               <iframe  frameborder="0" webkitallowfullscreen>
-                                </iframe>
-                              </div>
-                    </div>
-
-              </div>
-
-              <div class="col-md-offset-6 ">
-                            <div class="adimagevideo"><img src="./images/Ad-femme.jpg">
-                              <div class="emailvideo">
-                                  <h3>Get News</h3>
-                                <form action="action_page.php">
-                                    <input type="email" placeholder="your email address" name="email">
-                                  <button type="button" class="btn btn-default">Sign Me Up</button>
-                                </form>
-                              </div>
-                            </div>
-              </div>
-      </div>
-</div>
 
 </body>
 
