added black buttons

--- a/login.html
+++ b/login.html
@@ -41,21 +41,6 @@
             </ul>
         </nav>
 
-<div class="container-fluid">
-        <div class="col-lg-8 col-md-6 col-xs-12" >
-              <div class="social">
-                 <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
-              </div>
-
 </head>
 
 <body>
@@ -65,14 +50,14 @@
     <div class="col-md-6 col-lg-6 col-xs-6" >
   <form>
     <div class="form-group">
-      <label for="usr">Name:</label>
-      <input type="text" class="form-control" id="usr"  placeholder="Username or address">
+      <label for="usr">Existing User</label>
+      <input type="text" class="form-control" id="usr"  placeholder="Username or email address">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
+
       <input type="password" class="form-control" id="pwd" placeholder="Password">
     </div>
-    <button type="button" class="btn btn-default">Login</button>
+    <button type="button" class="btn btn-primary">Login</button>
     <input type="checkbox" class="normal"/>Remember Me
     <br>
     <a href="#">Lost Password</a>
@@ -82,24 +67,25 @@
     <div class="col-md-6 col-lg-6 col-xs-6" >
   <form>
     <div class="form-group">
-      <label for="usr">Name:</label>
+      <label for="usr">Registration</label>
       <input type="text" class="form-control" id="usr" placeholder="Username ">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Username">
+
+      <input type="password" class="form-control" id="pwd" placeholder="Email address">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Username">
+
+      <input type="password" class="form-control" id="pwd" placeholder="Confirm Email Address">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Username">
+      <input type="password" class="form-control" id="pwd" placeholder="Password">
     </div>
-    <button type="button" class="btn btn-default">Login</button>
-    <input type="checkbox" class="normal"/>Remember Me
-    <br>
+    <div class="form-group">
+      <input type="password" class="form-control" id="pwd" placeholder="Confirm Password">
+    </div>
+    <button type="button" class="btn btn-primary">Sign Me Up</button>
+    <input type="checkbox" class="normal"/> I accept the <a href="#">User Policy</a>    <br>
     <a href="#">Lost Password</a>
   </form>
 </div>
