--- a/quiz.html
+++ b/quiz.html
@@ -75,7 +75,7 @@
                           <h3>Get News!</h3>
                         <form action="action_page.php">
                             <input type="email" placeholder="your email address" name="email">
-                          <button type="button" class="btn btn-default">Sign Me Up</button>
+                          <button type="button" class="btn btn-primary">Sign Me Up</button>
                         </form>
                        </div>
                   </div>
