--- a/videos.html
+++ b/videos.html
@@ -12,9 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+  <link href="<?php bloginfo('template_directory');?>video.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/video.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -42,7 +42,7 @@
         </nav>
 
 
-          <div class="col-lg-push-8 col-xs-12" >
+          <div class="col-lg-12 col-xs-12" >
                 <div class="social">
                    <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                    <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
@@ -79,13 +79,13 @@
 
                   </div>
 
-                  <div class="col-lg-offset-9">
+                  <div class="col-lg-offset-7">
                                 <div class="adimagevideo"><img src="./images/Ad-femme.jpg">
                                   <div class="emailvideo">
                                       <h3>Get News</h3>
                                     <form action="action_page.php">
                                         <input type="email" placeholder="your email address" name="email">
-                                      <button type="button" class="btn btn-default">Sign Me Up</button>
+                                      <button type="button" class="btn btn-primary">Sign Me Up</button>
                                     </form>
                                   </div>
                                 </div>
