--- a/home.html
+++ b/home.html
@@ -94,40 +94,35 @@
                     </li>
                 </ul>
         </div>
-                        <div class="col-lg-9 col-md-6 col-xs-12">
-          <hr>
-                          <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
-                            <div class="tweets">
-                        <hr>
-                       <h3>The Tweets</h3>
-                                <ul>
-                                  <li class="service-list">
-                                      <a href="url"><div class="twitter_ID">@Micheal
-                                      </div>
-                                      <img src="./images/Bio-Photo.jpg" alt="icon" height="32" width="32">
-                                      <p>The Best Labor Day Deals</p><?php echo "$time_offset" ?>
+                <div class="col-lg-9 col-md-6 col-xs-12">
+                <hr>
+                  <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
+                    <div class="tweets">
+                <hr>
+               <h3>The Tweets</h3>
+                        <ul>
+                          <li class="service-list">
+                              <a href="url"><div class="twitter_ID">@Micheal
+                              </div>
+                              <img src="./images/Bio-Photo.jpg" alt="icon" height="32" width="32">
+                              <p>The Best Labor Day Deals</p><?php echo "$time_offset" ?>
 
-                                  </li>
-                                </ul>
-                                <ul>
-                                  <li class="service-list">
-                                      <a href="url"><div class="twitter_ID">@FrankP</a>
-                                      </div>
-                                      <img src="./images/bio-photo-2.jpg" alt="icon" height="32" width="32">
-                                      <p>The Best Labor Day Deals</p> <?php echo "$time_offset" ?>
-                                  </li>
-                                </ul>
-                            </div>
-                        </div>
-
-<!--COL div-->
+                          </li>
+                        </ul>
+                        <ul>
+                          <li class="service-list">
+                              <a href="url"><div class="twitter_ID">@FrankP</a>
+                              </div>
+                              <img src="./images/bio-photo-2.jpg" alt="icon" height="32" width="32">
+                              <p>The Best Labor Day Deals</p> <?php echo "$time_offset" ?>
+                          </li>
+                        </ul>
+                    </div>
+                </div>
       </div>
           </div>
-<!--nav sidebar-->
-
 <body>
-      <!-- <div class="row">
- -->        <div class="col-lg-pull-6 col-md-6 col-xs-12" >
+           <div class="col-lg-pull-6 col-md-6 col-xs-12" >
             <h2>Videos</h2>
                         <div class="video-container">
                             <div class="playbtn"><img src="./images/playbtn.png"></div>
