--- a/home.html
+++ b/home.html
@@ -32,6 +32,11 @@
       <img src="./images/juicyHeader.png" height="242" width="942" >
     </div>
 
+<div class="container-fluid">
+
+      <div class= "row">
+
+        <div class="col-lg-12 col-md-12 col-xs-12" >
           <nav class="navbar navbar-default " style="background-color: white">
             <div class="navbar-header">
               <img src="./images/shareworthy-Theme-Logo.jpg" >
@@ -43,20 +48,22 @@
               <li><a data-toggle="tab" href="Polls">Polls</a></li>
             </ul>
         </nav>
+      </div>
+</div>
 
 <div class="container-fluid">
-        <div class="col-lg-push-6 col-md-6 col-xs-12" >
+        <div class="col-lg-push-6 col-md-6 col-xs-6" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Github-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Behance-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
-                 <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/YouTube-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
               </div>
 
 </head>
@@ -68,7 +75,7 @@
                 <ul>
                     <li class="service-list">
                       <a href="url">
-                        <img src="./images/Story-Photo.jpg" alt="icon" height="32" width="32"></a>
+                        <img src="./images/story-photo.jpg" alt="icon" height="32" width="32"></a>
                         <p>The Best Labor Day Deals</p></a>
                     </li>
                 </ul>
@@ -122,10 +129,10 @@
       </div>
           </div>
 <body>
-           <div class="col-lg-pull-6 col-md-6 col-xs-12" >
+        <div class="col-lg-pull-6 col-md-6 col-xs-12" >
             <h2>Videos</h2>
                         <div class="video-container">
-                            <div class="playbtn"><img src="./images/playbtn.png"></div>
+                            <div class="playbtn"><img src="./images/PlayBtn.png"></div>
                               <div class="UnicornLarge">
                                 <img src="./images/unicorn-large-crop.jpg">
                                <iframe  frameborder="0">
@@ -145,7 +152,7 @@
 
                           <ul>
                               <li class="service-list">
-                                  <a href="url"><img src="./images/Video-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
+                                  <a href="url"><img src="./images/VIdeo-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
                                   <p>The Best Labor Day Deals</p><a href="url"></a>
 
                               </li>
@@ -161,7 +168,7 @@
 
                           <ul>
                               <li class="service-list">
-                                  <a href="url"><img src="./images/Video-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
+                                  <a href="url"><img src="./images/VIdeo-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
                                   <p>The Best Labor Day Deals</p><a href="url"></a>
 
                               </li>
@@ -177,7 +184,7 @@
 
                           <ul>
                               <li class="service-list">
-                                  <a href="url"><img src="./images/Video-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
+                                  <a href="url"><img src="./images/VIdeo-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
                                   <p>The Best Labor Day Deals</p><a href="url"></a>
 
                               </li>
@@ -193,7 +200,7 @@
 
                           <ul>
                               <li class="service-list">
-                                  <a href="url"><img src="./images/Video-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
+                                  <a href="url"><img src="./images/VIdeo-Thumb-2-Unicrn.jpg" alt="icon" height="32" width="42"></a>
                                   <p>The Best Labor Day Deals</p><a href="url"></a>
 
                               </li>
@@ -270,7 +277,7 @@
 
 
             </div>
-      </div>
+        </div>
 
 </div>
 </body>
