working on breakpoints2

--- a/videos.html
+++ b/videos.html
@@ -69,7 +69,7 @@
                       <div class = "video-container">
                         <div class="playbtn"><img src="./images/playbtn.png"></div>
                                   <div class="UnicornLarge">
-                                    <img src="./images/unicorn-large-crop.jpg">
+                                    <img src="./images/unicorn-large-crop.jpg" height="380" width="700">
                                    <iframe  frameborder="0" webkitallowfullscreen>
                                     </iframe>
                                   </div>
