--- a/home.html
+++ b/home.html
@@ -32,7 +32,6 @@
       <img src="./images/juicyHeader.png" height="242" width="942" >
     </div>
 
-<div class="container-fluid">
 
       <div class= "row">
 
@@ -50,6 +49,7 @@
         </nav>
       </div>
 </div>
+
 
 <div class="container-fluid">
         <div class="col-lg-push-6 col-md-6 col-xs-6" >
@@ -134,7 +134,7 @@
                         <div class="video-container">
                             <div class="playbtn"><img src="./images/PlayBtn.png"></div>
                               <div class="UnicornLarge">
-                                <img src="./images/unicorn-large-crop.jpg">
+                                <img src="./images/unicorn-large-crop.jpg" height="330" width="700">
                                <iframe  frameborder="0">
                                 </iframe>
                               </div>
