working on breakpoints3

--- a/home.html
+++ b/home.html
@@ -29,30 +29,26 @@
   <?php wp_head();?>
 
     <div class ="juicy-header">
-      <img src="./images/juicyHeader.png" height="242" width="942" >
+      <img src="./images/juicyHeader.png" height="80%" width="80%" >
     </div>
-
-
       <div class= "row">
 
-        <div class="col-lg-12 col-md-12 col-xs-12" >
           <nav class="navbar navbar-default " style="background-color: white">
+              <ul class="nav navbar-nav">
             <div class="navbar-header">
               <img src="./images/shareworthy-Theme-Logo.jpg" >
             </div>
-              <ul class="nav navbar-nav">
               <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
               <li><a data-toggle="tab" href="Videos">Videos</a></li>
               <li><a data-toggle="tab" href="Home">Stories</a></li>
               <li><a data-toggle="tab" href="Polls">Polls</a></li>
             </ul>
         </nav>
-      </div>
-</div>
 
+      </div>
 
 <div class="container-fluid">
-        <div class="col-lg-push-6 col-md-6 col-xs-6" >
+        <div class="col-lg-push-6 col-xs-6" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
@@ -67,9 +63,10 @@
               </div>
 
 </head>
-      <div class="vertical-line">
 
-        <div class="stories" >
+<body>
+      <div class="vertical-line">
+          <div class="stories" >
             <h3>Popular Stories</h3>
               <br>
                 <ul>
@@ -100,8 +97,8 @@
                         <p>The Best Labor Day Deals</p></a>
                     </li>
                 </ul>
-        </div>
-                <div class="col-lg-9 col-md-6 col-xs-12">
+          </div>
+                <!-- <div class="col-lg-9 col-md-6 col-xs-12"> -->
                 <hr>
                   <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
                     <div class="tweets">
@@ -125,10 +122,9 @@
                           </li>
                         </ul>
                     </div>
-                </div>
-      </div>
+                <!-- </div> -->
           </div>
-<body>
+        </div>
         <div class="col-lg-pull-6 col-md-6 col-xs-12" >
             <h2>Videos</h2>
                         <div class="video-container">
@@ -223,7 +219,6 @@
                           </ul>
                     </div>
 
-      <!-- </div> -->
 
             <div class="quizzies" >
                               <br>
@@ -275,9 +270,9 @@
                             </li>
                         </ul>
 
-
             </div>
         </div>
+      </div>
 
 </div>
 </body>
