fixed overlay with float left

--- a/home.html
+++ b/home.html
@@ -31,21 +31,35 @@
     <div class ="juicy-header">
       <img src="./images/juicyHeader.png" height="80%" width="80%" >
     </div>
-      <div class= "row">
 
-          <nav class="navbar navbar-default " style="background-color: white">
-              <ul class="nav navbar-nav">
-            <div class="navbar-header">
-              <img src="./images/shareworthy-Theme-Logo.jpg" >
+<!-- <div class="container-fluid"> -->
+              <div class="navbar-wrapper">
+                <nav class="navbar navbar-default " style="background-color: white">
+                  <div class="row">
+
+                      <div class="navbar-header">
+                      <img src="./images/shareworthy-Theme-Logo.jpg" >
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"></a>
+                      </div>
+                      <div class="collapse navbar-collapse" id="myNavbar">
+
+                        <ul class="nav navbar-nav navbar-right">
+                      <li class="active"><a data-toggle="tab" href="Home">Home</a></li>
+                      <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
+                      <li><a data-toggle="tab" href="Videos">Videos</a></li>
+                      <li><a data-toggle="tab" href="Home">Stories</a></li>
+                      <li><a data-toggle="tab" href="Polls">Polls</a></li>
+
+                        </ul>
+                      </div>
+
+                    </div>
             </div>
-              <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
-              <li><a data-toggle="tab" href="Videos">Videos</a></li>
-              <li><a data-toggle="tab" href="Home">Stories</a></li>
-              <li><a data-toggle="tab" href="Polls">Polls</a></li>
-            </ul>
-        </nav>
-
-      </div>
 
 <div class="container-fluid">
         <div class="col-lg-push-6 col-xs-6" >
@@ -98,9 +112,11 @@
                     </li>
                 </ul>
           </div>
-                <!-- <div class="col-lg-9 col-md-6 col-xs-12"> -->
+
                 <hr>
+      </div>
                   <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
+
                     <div class="tweets">
                 <hr>
                <h3>The Tweets</h3>
@@ -122,15 +138,15 @@
                           </li>
                         </ul>
                     </div>
-                <!-- </div> -->
+
           </div>
-        </div>
+
         <div class="col-lg-pull-6 col-md-6 col-xs-12" >
             <h2>Videos</h2>
                         <div class="video-container">
                             <div class="playbtn"><img src="./images/PlayBtn.png"></div>
                               <div class="UnicornLarge">
-                                <img src="./images/unicorn-large-crop.jpg" height="330" width="700">
+                                <img src="./images/unicorn-large-crop.jpg">
                                <iframe  frameborder="0">
                                 </iframe>
                               </div>
