--- a/index.html
+++ b/index.html
@@ -26,18 +26,34 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <?php wp_head();?>
-          <nav class="navbar navbar-default " style="background-color: white">
-            <div class="navbar-header">
-              <img src="./images/shareworthy-Theme-Logo.jpg" >
-            </div>
-              <ul class="nav navbar-nav">
-              <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
-              <li><a data-toggle="tab" href="Videos">Videos</a></li>
-              <li><a data-toggle="tab" href="Home">Stories</a></li>
-              <li><a data-toggle="tab" href="Polls">Polls</a></li>
-            </ul>
-        </nav>
+
+          <div class="container-fluid">
+              <div class="navbar-wrapper">
+                <nav class="navbar navbar-default " style="background-color: white">
+                  <div class="row">
+
+                      <div class="navbar-header">
+                      <img src="./images/shareworthy-Theme-Logo.jpg" >
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"></a>
+                      </div>
+                      <div class="collapse navbar-collapse" id="myNavbar">
+
+                        <ul class="nav navbar-nav navbar-right">
+                      <li class="active"><a data-toggle="tab" href="Home">Home</a></li>
+                      <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
+                      <li><a data-toggle="tab" href="Videos">Videos</a></li>
+                      <li><a data-toggle="tab" href="Home">Stories</a></li>
+                      <li><a data-toggle="tab" href="Polls">Polls</a></li>
+                        </ul>
+                  </div>
+
+                    </div>
+                  </div>
 
 <div class="container-fluid">
         <div class="col-lg-11 col-md-12 col-xs-12" >
