--- a/home3.html
+++ b/home3.html
@@ -62,10 +62,7 @@
             </div>
 
 <div class="container-fluid">
-        <div class="col-lg-12 col-xs-6" >
-            <div class="row">
-
-
+        <div class="col-lg-push-6 col-xs-6" >
               <div class="social">
                  <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
@@ -78,31 +75,84 @@
                  <a href="#"><img src="./images/YouTube-crop.jpg" alt="icon" height="32" width="32"></a>
                  <a href="#"><img src="./images/Tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
               </div>
-            </div>
-        </div>
-</div>
+
 </head>
 
 <body>
+      <div class="vertical-line">
+        <div class=" col-xs-12" >
+          <div class="stories" >
+            <h3>Popular Stories</h3>
 
-    <div class="container-fluid">
-          <div class="col-lg-6 col-xs-12" >
-              <div class="row">
+                <ul>
+                    <li class="service-list">
+                      <a href="url">
+                        <img src="./images/story-photo.jpg" alt="icon" height="32" width="32"></a>
+                        <p>The Best Labor Day Deals</p></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="service-list">
+                        <a href="url">
+                        <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="32"></a>
+                        <p>The Best Labor Day Deals</p></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="service-list">
+                        <a href="url">
+                        <img src="./images/Story-Photo-3.jpg" alt="icon" height="32" width="32"></a>
+                        <p>The Best Labor Day Deals</p></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="service-list">
+                        <a href="url">
+                        <img src="./images/Buzz-NathanPeretti-Photo-4.jpg" alt="icon" height="32" width="32"></a>
+                        <p>The Best Labor Day Deals</p></a>
+                    </li>
+                </ul>
+          </div>
+        </div>
+      </div>
+                  <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
 
-                  <h2>Videos</h2>
-                      <div class="video-container">
-                          <div class="playbtn"><img src="./images/PlayBtn.png"></div>
-                            <div class="UnicornLarge">
-                              <img src="./images/unicorn-large-crop.jpg">
-                             <iframe  frameborder="0">
-                              </iframe>
-                            </div>
-                      </div>
+                    <div class="tweets">
+                <hr>
+               <h3>The Tweets</h3>
+                        <ul>
+                          <li class="service-list">
+                              <a href="url"><div class="twitter_ID">@Micheal
+                              </div>
+                              <img src="./images/Bio-Photo.jpg" alt="icon" height="32" width="32">
+                              <p>The Best Labor Day Deals</p><?php echo "$time_offset" ?>
+
+                          </li>
+                        </ul>
+                        <ul>
+                          <li class="service-list">
+                              <a href="url"><div class="twitter_ID">@FrankP</a>
+                              </div>
+                              <img src="./images/bio-photo-2.jpg" alt="icon" height="32" width="32">
+                              <p>The Best Labor Day Deals</p> <?php echo "$time_offset" ?>
+                          </li>
+                        </ul>
+                    </div>
+
           </div>
 
+        <div class="col-lg-pull-6 col-md-6 col-xs-12" >
+            <h2>Videos</h2>
+                        <div class="video-container">
+                            <div class="playbtn"><img src="./images/PlayBtn.png"></div>
+                              <div class="UnicornLarge">
+                                <img src="./images/unicorn-large-crop.jpg">
+                               <iframe  frameborder="0">
+                                </iframe>
+                              </div>
+                        </div>
 
-
-          <div class="videos">
+                    <div class="videos">
 
                           <ul>
                               <li class="service-list">
@@ -185,7 +235,8 @@
                           </ul>
                     </div>
 
-                     <div class="quizzies" >
+
+            <div class="quizzies" >
                               <br>
 
                               <hr>
@@ -236,70 +287,10 @@
                         </ul>
 
             </div>
-  </div>
-
-    <div class="col-lg-6 col-xs-12" >
-  <div class="vertical-line">
-          <div class="stories" >
-                  <h3>Popular Stories</h3>
-
-                      <ul>
-                          <li class="service-list">
-                            <a href="url">
-                              <img src="./images/story-photo.jpg" alt="icon" height="32" width="32"></a>
-                              <p>The Best Labor Day Deals</p></a>
-                          </li>
-                      </ul>
-                      <ul>
-                          <li class="service-list">
-                              <a href="url">
-                              <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="32"></a>
-                              <p>The Best Labor Day Deals</p></a>
-                          </li>
-                      </ul>
-                      <ul>
-                          <li class="service-list">
-                              <a href="url">
-                              <img src="./images/Story-Photo-3.jpg" alt="icon" height="32" width="32"></a>
-                              <p>The Best Labor Day Deals</p></a>
-                          </li>
-                      </ul>
-                      <ul>
-                          <li class="service-list">
-                              <a href="url">
-                              <img src="./images/Buzz-NathanPeretti-Photo-4.jpg" alt="icon" height="32" width="32"></a>
-                              <p>The Best Labor Day Deals</p></a>
-                          </li>
-                      </ul>
-
-        <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
-        <div class="tweets">
-                <hr>
-               <h3>The Tweets</h3>
-                        <ul>
-                          <li class="service-list">
-                              <a href="url"><div class="twitter_ID">@Micheal
-                              </div>
-                              <img src="./images/Bio-Photo.jpg" alt="icon" height="32" width="32">
-                              <p>The Best Labor Day Deals</p><?php echo "$time_offset" ?>
-
-                          </li>
-                        </ul>
-                        <ul>
-                          <li class="service-list">
-                              <a href="url"><div class="twitter_ID">@FrankP</a>
-                              </div>
-                              <img src="./images/bio-photo-2.jpg" alt="icon" height="32" width="32">
-                              <p>The Best Labor Day Deals</p> <?php echo "$time_offset" ?>
-                          </li>
-                        </ul>
-                    </div>
-          </div>
-
-              </div>
+        </div>
       </div>
-</div>
 
+</div>
 </body>
 
 
